--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "url-query-parser",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "A simple script for parsing and manipulating application/x-www-form-urlencoded data",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "build": "tsc",
     "test": "ts-node node_modules/jasmine/bin/jasmine src/**/*.spec.*",
