--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "url-query-parser",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "A simple script for parsing and manipulating application/x-www-form-urlencoded data",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "test": "ts-node node_modules/jasmine/bin/jasmine src/**/*.spec.*",
@@ -14,7 +14,9 @@
     "url": "git+https://github.com/larryc5/url-query-parser.git"
   },
   "files": [
-    "lib/**/*"
+    "dist/**/*",
+    "/simple.js",
+    "/simple.d.ts"
   ],
   "keywords": [],
   "author": "larryc5 <larry.costigan5@gmail.com>",
