--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2015",
     "module": "commonjs",
     "declaration": true,
-    "outDir": "./lib",
+    "outDir": "./dist",
     "strict": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "src/**/*.spec.*"]
+  "exclude": ["node_modules", "dist", "src/**/*.spec.*"]
 }
